[tool.poetry]
name = "vpngate-client"
version = "0.1.0"
description = ""
authors = ["tantan-tanuki"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
dataset = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
